--- a/CodeV0.2/app/src/main/AndroidManifest.xml
+++ b/CodeV0.2/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".FormRegleActivity" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".RegleActivity"></activity>
     </application>
 
 </manifest>
