--- a/CodeV0.2/app/build.gradle
+++ b/CodeV0.2/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     compile 'com.github.sundeepk:compact-calendar-view:2.0.1'
     compile 'com.github.IntruderShanky:scatter-piechart:1.0.0'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.github.myinnos:ImageSliderWithSwipes:1.0.1'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.myinnos:ImageSliderWithSwipes:1.0.1'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
